2015-04-17  Carlos Garcia Campos  <cgarcia@igalia.com>

        [SOUP] ResourceRequest cache policy is not encoded/decoded in IPC messages
        https://bugs.webkit.org/show_bug.cgi?id=143867

        Reviewed by Sergio Villar Senin.

        Encode/Decode the ResourceRequest cache policy.

        * Shared/soup/WebCoreArgumentCodersSoup.cpp:
        (IPC::ArgumentCoder<ResourceRequest>::encodePlatformData):
        (IPC::ArgumentCoder<ResourceRequest>::decodePlatformData):

2015-04-16  Sungmann Cho  <sungmann.cho@navercorp.com>

        Use UNUSED_PARAM instead of the void casting to suppress unused parameter warnings.
        https://bugs.webkit.org/show_bug.cgi?id=143750

        Reviewed by Darin Adler.

        No new tests, no behavior change.

        * WebProcess/Notifications/NotificationPermissionRequestManager.cpp:
        (WebKit::NotificationPermissionRequestManager::NotificationPermissionRequestManager):

2015-04-16  Brady Eidson  <beidson@apple.com>

        Compiling a content extension fails when user's home directory is on a different volume from /var/tmp.
        https://bugs.webkit.org/show_bug.cgi?id=143834

        Reviewed by Anders Carlsson.

        * UIProcess/API/APIUserContentExtensionStore.cpp:
        (API::compiledToFile): Use moveFile() instead of renameFile()

2015-04-16  Anders Carlsson  <andersca@apple.com>

        Deprecate _WKWebsiteDataStore in favor of WKWebsiteDataStore
        https://bugs.webkit.org/show_bug.cgi?id=143844

        Reviewed by Dan Bernstein.

        * Shared/API/Cocoa/WKFoundation.h:
        * UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
        (-[WKWebViewConfiguration _validate]):
        * UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:
        * UIProcess/API/Cocoa/_WKWebsiteDataRecord.h:
        * UIProcess/API/Cocoa/_WKWebsiteDataStore.h:
        * mac/postprocess-framework-headers.sh:

2015-04-16  Alex Christensen  <achristensen@webkit.org>

        Removed unused WKUserContentFilterRef.