@@ -79,7 +79,12 @@ inline FileTimes fileTimes(const String& path)
     struct stat fileInfo;
     if (stat(WebCore::fileSystemRepresentation(path).data(), &fileInfo))
         return { };
+#if PLATFORM(COCOA)
     return { std::chrono::system_clock::from_time_t(fileInfo.st_birthtime), std::chrono::system_clock::from_time_t(fileInfo.st_mtime) };
+#else
+    // FIXME: we need a way to get the creation time.
+    return { std::chrono::system_clock::from_time_t(fileInfo.st_ctime), std::chrono::system_clock::from_time_t(fileInfo.st_mtime) };
+#endif
 }
 
 inline void updateFileModificationTimeIfNeeded(const String& path)
