@@ -1,5 +1,13 @@
 2015-04-17  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        Unreviewed. Fix the build with ENABLE(NETWORK_CACHE) and !ENABLE(SHAREABLE_RESOURCE).
+
+        * NetworkProcess/cache/NetworkCacheEntry.cpp:
+        * NetworkProcess/cache/NetworkCacheFileSystemPosix.h:
+        (WebKit::NetworkCache::fileTimes): There's no st_birthtime in Linux.
+
+2015-04-17  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [SOUP] ResourceRequest cache policy is not encoded/decoded in IPC messages
         https://bugs.webkit.org/show_bug.cgi?id=143867
 
